<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Project2DigitalWellbeing</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cd_back">Go back</string>
    <string name="cd_previous_week">Previous week</string>
    <string name="cd_next_week">Next week</string>
    <string name="cd_weekly_bar_chart">Bar chart showing daily screen time for the selected week</string>
    <string name="weekly_overview_title">Weekly Overview</string>
    <string name="weekly_overview_date_range_placeholder">Mar 5 - Mar 11</string>
    <string name="weekly_chart_title">Daily Screen Time</string>
    <string name="weekly_stats_title">This Week&apos;s Stats</string>
    <string name="weekly_avg_daily_screen_time">Average daily screen time</string>
    <string name="weekly_avg_placeholder">4h 20m</string>
    <string name="weekly_most_used_day">Most used day</string>
    <string name="weekly_max_placeholder">Sat - 7h 10m</string>
    <string name="weekly_total_screen_time">Total screen time</string>
    <string name="weekly_total_placeholder">30h 12m</string>
    <string name="weekly_trend_placeholder">Your screen time increased by 18% compared to last week.</string>
    <string name="weekly_top_apps_title">Top Apps This Week</string>
</resources>
