<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/weekly_overview_background"
    android:fillViewport="true"
    tools:context=".presentation.dashboard.WeeklyOverviewActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/weekly_screen_padding"
        android:paddingBottom="@dimen/weekly_screen_bottom_padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="@dimen/weekly_icon_button_size"
                android:layout_height="@dimen/weekly_icon_button_size"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/cd_back"
                android:padding="@dimen/weekly_icon_padding"
                android:src="@drawable/arrow_left"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weekly_overview_title"
                android:textColor="@color/weekly_overview_title"
                android:textSize="@dimen/weekly_header_title_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/btnBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnBack" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/weekly_section_spacing"
            app:cardCornerRadius="@dimen/weekly_card_corner_radius"
            app:cardElevation="@dimen/weekly_card_elevation">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/weekly_selector_min_height"
                android:paddingHorizontal="@dimen/weekly_card_padding"
                android:paddingVertical="@dimen/weekly_selector_vertical_padding">

                <ImageButton
                    android:id="@+id/btnBackWeek"
                    android:layout_width="@dimen/weekly_icon_button_size_small"
                    android:layout_height="@dimen/weekly_icon_button_size_small"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/cd_previous_week"
                    android:padding="@dimen/weekly_small_icon_padding"
                    android:src="@drawable/chevron_left"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/weekly_overview_date_range_placeholder"
                    android:textColor="@color/weekly_overview_text_primary"
                    android:textSize="@dimen/weekly_section_title_size"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/btnNextWeek"
                    app:layout_constraintStart_toEndOf="@id/btnBackWeek"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/btnNextWeek"
                    android:layout_width="@dimen/weekly_icon_button_size_small"
                    android:layout_height="@dimen/weekly_icon_button_size_small"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/cd_next_week"
                    android:padding="@dimen/weekly_small_icon_padding"
                    android:src="@drawable/chevron_right"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/weekly_section_spacing"
            app:cardCornerRadius="@dimen/weekly_card_corner_radius"
            app:cardElevation="@dimen/weekly_card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/weekly_card_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/weekly_title_spacing_small"
                    android:text="@string/weekly_chart_title"
                    android:textColor="@color/weekly_overview_text_primary"
                    android:textSize="@dimen/weekly_chart_title_size"
                    android:textStyle="bold" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/barChart"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/weekly_chart_height"
                    android:contentDescription="@string/cd_weekly_bar_chart" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/weekly_section_spacing"
            app:cardCornerRadius="@dimen/weekly_card_corner_radius"
            app:cardElevation="@dimen/weekly_card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/weekly_card_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/weekly_title_spacing"
                    android:text="@string/weekly_stats_title"
                    android:textColor="@color/weekly_overview_text_primary"
                    android:textSize="@dimen/weekly_section_title_size"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/weekly_row_spacing"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/weekly_avg_daily_screen_time"
                        android:textColor="@color/weekly_overview_text_secondary"
                        android:textSize="@dimen/weekly_body_text_size" />

                    <TextView
                        android:id="@+id/tvAvg"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/weekly_content_spacing"
                        android:text="@string/weekly_avg_placeholder"
                        android:textColor="@color/weekly_overview_text_primary"
                        android:textSize="@dimen/weekly_stat_value_text_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/weekly_overview_divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/weekly_row_spacing"
                    android:layout_marginBottom="@dimen/weekly_row_spacing"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/weekly_most_used_day"
                        android:textColor="@color/weekly_overview_text_secondary"
                        android:textSize="@dimen/weekly_body_text_size" />

                    <TextView
                        android:id="@+id/tvMax"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/weekly_content_spacing"
                        android:text="@string/weekly_max_placeholder"
                        android:textColor="@color/weekly_overview_text_primary"
                        android:textSize="@dimen/weekly_stat_value_text_size"
                        android:textStyle="bold" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/weekly_overview_divider" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/weekly_row_spacing"
                    android:baselineAligned="false"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/weekly_total_screen_time"
                        android:textColor="@color/weekly_overview_text_secondary"
                        android:textSize="@dimen/weekly_body_text_size" />

                    <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/weekly_content_spacing"
                        android:text="@string/weekly_total_placeholder"
                        android:textColor="@color/weekly_overview_text_primary"
                        android:textSize="@dimen/weekly_stat_value_text_size"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/weekly_trend_top_spacing"
            android:background="@drawable/bg_trend"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="@dimen/weekly_card_padding">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_image_onboarding"
                android:backgroundTint="@color/weekly_trend_icon_background"
                android:gravity="center"
                android:padding="@dimen/weekly_trend_icon_container_padding">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@null"
                    android:src="@drawable/trending_up"
                    app:tint="@color/white" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/weekly_content_spacing"
                android:text="@string/weekly_trend_placeholder"
                android:textColor="@color/white"
                android:textSize="@dimen/weekly_body_text_size" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/weekly_section_spacing"
            app:cardCornerRadius="@dimen/weekly_card_corner_radius"
            app:cardElevation="@dimen/weekly_card_elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/weekly_card_padding">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/weekly_title_spacing_small"
                    android:text="@string/weekly_top_apps_title"
                    android:textColor="@color/weekly_overview_text_primary"
                    android:textSize="@dimen/weekly_section_title_size"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvApps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:nestedScrollingEnabled="false"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_top_app_week" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
